--- a/Arrays_DSA.ipynb
+++ b/Arrays_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIZQcJFE970ov3T7NV5zQj",
+      "authorship_tag": "ABX9TyOLMeEuDKgmgEWNYZWq8tWE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,14 +71,47 @@
         "    {\"month\": \"March\", \"expense\": 2600},\n",
         "    {\"month\": \"April\", \"expense\": 2130},\n",
         "    {\"month\": \"May\", \"expense\": 2190}\n",
-        "]\n",
-        "\n",
-        "\n"
+        "]\n"
       ],
       "metadata": {
         "id": "LiZHkru12CzB"
       },
-      "execution_count": 11,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1. In Feb, how many dollars you spent extra compare to January?\n",
+        "january_expense = month_expenses[0][\"expense\"]\n",
+        "february_expense = month_expenses[1][\"expense\"]\n",
+        "print(\"Dollars spent in Feb compared to January is:\",february_expense-january_expense)"
+      ],
+      "metadata": {
+        "id": "xN4mLqdw6y3E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "99e49576-5840-4808-f030-62247a31256b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dollars spent in Feb compared to January is: 150\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3dF-atX47shp"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
