--- a/Arrays_DSA.ipynb
+++ b/Arrays_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLMeEuDKgmgEWNYZWq8tWE",
+      "authorship_tag": "ABX9TyNZRBLEjHgs39jgwX5Us2tO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,9 +107,34 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#2. Find out your total expense in first quarter (first three months) of the year.\n",
+        "total_expense = month_expenses[0][\"expense\"] + month_expenses[1][\"expense\"] + month_expenses[2][\"expense\"]\n",
+        "print(\"Total expense in first quarter is:\",total_expense)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3dF-atX47shp",
+        "outputId": "3cfb892c-b7a6-4c09-da10-e2fb40b668d5"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total expense in first quarter is: 7150\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3dF-atX47shp"
+        "id": "URhyxuO19DIO"
       },
       "execution_count": null,
       "outputs": []
