--- a/Arrays_DSA.ipynb
+++ b/Arrays_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZRBLEjHgs39jgwX5Us2tO",
+      "authorship_tag": "ABX9TyNcFgLqymvhsr+1jswhAE4F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,8 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
+        "\"\"\"\"\"\n",
+        "Problem Statement:\n",
         "    Let us say your expense for every month are listed below,\n",
         "        January - 2200\n",
         "        February - 2350\n",
@@ -54,19 +55,38 @@
         "4. June month just finished and your expense is 1980 dollar. Add this item to our monthly expense list\n",
         "5. You returned an item that you bought in a month of April and\n",
         "got a refund of 200$. Make a correction to your monthly expense list\n",
-        "based on this"
+        "based on this\"\"\"\"\""
       ],
       "metadata": {
-        "id": "-j6SJOFf11GO"
+        "id": "-j6SJOFf11GO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        },
+        "outputId": "df41884c-47ad-437d-fb7f-237984d394d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\"\"\\nProblem Statement:\\n    Let us say your expense for every month are listed below,\\n        January - 2200\\n        February - 2350\\n        March - 2600\\n        April - 2130\\n        May - 2190\\n\\nCreate a list to store these monthly expenses and using that find out,\\n\\n1. In Feb, how many dollars you spent extra compare to January?\\n2. Find out your total expense in first quarter (first three months) of the year.\\n3. Find out if you spent exactly 2000 dollars in any month\\n4. June month just finished and your expense is 1980 dollar. Add this item to our monthly expense list\\n5. You returned an item that you bought in a month of April and\\ngot a refund of 200$. Make a correction to your monthly expense list\\nbased on this'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "month_expenses = [\n",
-        "    {\"month\": \"January\", \"expense\": 2200},\n",
+        "    {\"month\": \"January\", \"expense\": 2000},\n",
         "    {\"month\": \"February\", \"expense\": 2350},\n",
         "    {\"month\": \"March\", \"expense\": 2600},\n",
         "    {\"month\": \"April\", \"expense\": 2130},\n",
@@ -76,7 +96,7 @@
       "metadata": {
         "id": "LiZHkru12CzB"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -92,15 +112,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "99e49576-5840-4808-f030-62247a31256b"
+        "outputId": "6a1c9ea6-515d-4690-b90f-bfb4d390fc28"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Dollars spent in Feb compared to January is: 150\n"
+            "Dollars spent in Feb compared to January is: 350\n"
           ]
         }
       ]
@@ -117,15 +137,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3dF-atX47shp",
-        "outputId": "3cfb892c-b7a6-4c09-da10-e2fb40b668d5"
+        "outputId": "da64332a-8017-44e1-e491-a31d4bb68adc"
       },
-      "execution_count": 19,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total expense in first quarter is: 7150\n"
+            "Total expense in first quarter is: 6950\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Find out if you spent exactly 2000 dollars in any month\n",
+        "for month in month_expenses:\n",
+        "  if month[\"expense\"]==2000:\n",
+        "    print(\"Exactly 2000 dolars are spent in the month:\",month[\"month\"])\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"No exactly 2000 dolars in any month\")\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "URhyxuO19DIO",
+        "outputId": "b9c69c5e-65a1-4a4c-a4e7-f615901a87d0"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Exactly 2000 dolars are spent in the month: January\n"
           ]
         }
       ]
@@ -134,9 +184,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "URhyxuO19DIO"
+        "id": "Anwi0roQ-K2z"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     }
   ]
