--- a/Arrays_DSA.ipynb
+++ b/Arrays_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcFgLqymvhsr+1jswhAE4F",
+      "authorship_tag": "ABX9TyNtdV7yhxwtyYeagzD5Z26M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -182,11 +182,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#June month just finished and your expense is 1980 dollar. Add this item to our monthly expense list\n",
+        "month_expenses.append({\"month\": \"June\", \"expense\":1980})"
+      ],
       "metadata": {
         "id": "Anwi0roQ-K2z"
       },
-      "execution_count": 38,
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "month_expenses"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pIOx16U8AlqY",
+        "outputId": "8bff8c57-9a92-410b-ba3b-6eb1e5fd952c"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'month': 'January', 'expense': 2000},\n",
+              " {'month': 'February', 'expense': 2350},\n",
+              " {'month': 'March', 'expense': 2600},\n",
+              " {'month': 'April', 'expense': 2130},\n",
+              " {'month': 'May', 'expense': 2190},\n",
+              " {'month': 'June', 'expense': 1980}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G9BgZChHAnoe"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
