--- a/Arrays_DSA.ipynb
+++ b/Arrays_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtdV7yhxwtyYeagzD5Z26M",
+      "authorship_tag": "ABX9TyMBLNptLsHG2PeQ1wTMFAtk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 107
         },
-        "outputId": "df41884c-47ad-437d-fb7f-237984d394d2"
+        "outputId": "a7ee461e-860f-4138-bf11-39b2d6a00730"
       },
-      "execution_count": 34,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,14 +78,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 96
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "month_expenses = [\n",
+        "monthly_expenses = [\n",
         "    {\"month\": \"January\", \"expense\": 2000},\n",
         "    {\"month\": \"February\", \"expense\": 2350},\n",
         "    {\"month\": \"March\", \"expense\": 2600},\n",
@@ -96,15 +96,15 @@
       "metadata": {
         "id": "LiZHkru12CzB"
       },
-      "execution_count": 35,
+      "execution_count": 97,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#1. In Feb, how many dollars you spent extra compare to January?\n",
-        "january_expense = month_expenses[0][\"expense\"]\n",
-        "february_expense = month_expenses[1][\"expense\"]\n",
+        "january_expense = monthly_expenses[0][\"expense\"]\n",
+        "february_expense = monthly_expenses[1][\"expense\"]\n",
         "print(\"Dollars spent in Feb compared to January is:\",february_expense-january_expense)"
       ],
       "metadata": {
@@ -112,9 +112,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a1c9ea6-515d-4690-b90f-bfb4d390fc28"
+        "outputId": "49f31d89-d6c1-4d08-c4b9-eb237acd9cb2"
       },
-      "execution_count": 36,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
       "cell_type": "code",
       "source": [
         "#2. Find out your total expense in first quarter (first three months) of the year.\n",
-        "total_expense = month_expenses[0][\"expense\"] + month_expenses[1][\"expense\"] + month_expenses[2][\"expense\"]\n",
+        "total_expense = monthly_expenses[0][\"expense\"] + monthly_expenses[1][\"expense\"] + monthly_expenses[2][\"expense\"]\n",
         "print(\"Total expense in first quarter is:\",total_expense)"
       ],
       "metadata": {
@@ -137,9 +137,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3dF-atX47shp",
-        "outputId": "da64332a-8017-44e1-e491-a31d4bb68adc"
+        "outputId": "63abc91a-40d5-4b55-e60f-7743c29815a2"
       },
-      "execution_count": 37,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
       "cell_type": "code",
       "source": [
         "#Find out if you spent exactly 2000 dollars in any month\n",
-        "for month in month_expenses:\n",
+        "for month in monthly_expenses:\n",
         "  if month[\"expense\"]==2000:\n",
         "    print(\"Exactly 2000 dolars are spent in the month:\",month[\"month\"])\n",
         "    break\n",
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "URhyxuO19DIO",
-        "outputId": "b9c69c5e-65a1-4a4c-a4e7-f615901a87d0"
+        "outputId": "dcf213d7-d2a0-4e2e-9f82-354ab05eb592"
       },
-      "execution_count": 38,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,27 +184,27 @@
       "cell_type": "code",
       "source": [
         "#June month just finished and your expense is 1980 dollar. Add this item to our monthly expense list\n",
-        "month_expenses.append({\"month\": \"June\", \"expense\":1980})"
+        "monthly_expenses.append({\"month\": \"June\", \"expense\":1980})"
       ],
       "metadata": {
         "id": "Anwi0roQ-K2z"
       },
-      "execution_count": 39,
+      "execution_count": 101,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "month_expenses"
+        "monthly_expenses"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pIOx16U8AlqY",
-        "outputId": "8bff8c57-9a92-410b-ba3b-6eb1e5fd952c"
+        "outputId": "6e40f63d-2d4c-4bec-bc3e-a501fb11e0a8"
       },
-      "execution_count": 40,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,18 +219,37 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 102
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"You returned an item that you bought in a month of April and\n",
+        "got a refund of 200$. Make a correction to your monthly expense list\n",
+        "based on this\n",
+        "\"\"\"\n",
+        "new_April_expense = monthly_expenses[3][\"expense\"] - 200\n",
+        "print(new_April_expense)\n"
+      ],
       "metadata": {
-        "id": "G9BgZChHAnoe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SQ7amSXVCGuf",
+        "outputId": "579406ca-8b60-4af0-fb13-c985c6e3c1a1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1930\n"
+          ]
+        }
+      ]
     }
   ]
 }
